Change name of favorite-things.html file to index.html

--- a/favorite-places.html
+++ b/favorite-places.html
@@ -7,7 +7,7 @@
 <h1>My Favorite Places</h1>
 <h2>(that I've been to so far)</h2>
 <body>
-  <p>check them out!</p>
+  <p>Check them out!</p>
   <ol>
     <li>Il Duomo in Florence, Italy</li>
     <img src="duomo-florence-italy-777x437.jpg">
