--- a/my-first-webpage.html
+++ b/my-first-webpage.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html lang="en-US">
+<link href="css/styles.css" rel="stylesheet" type="text/css">
 <head>
   <title>Web page #1!</title>
 </head>
 <body>
 <h1>My first web page</h1>
-<h2>Written with the guidance of Epicodus</h2>
-
-<p>This is my first webpage!</p>
+<h2>Written with the guidance of <em>Epicodus</em></h2>
+<p>Check out <a href="http://www.epicodus.com">Epicodus.</a>It's a great school for learning web programming.</p>
+<p>Here is a link to my <a href="my-favorite-things.html">favorite things</a>.</p>
+<p>This is my <strong>first webpage</strong>!</p>
+<img src="img/IMG_1324.JPG" alt="Daquiri Ice">
 <p>Isn't it nice?</p>
 <p>Here are some things I'm going to learn about coding:</p>
 <ul>
